# cuda-renderer

./: .gitignore  CMakeLists.txt  README.md
include/: camera.h  common.h  datatype.h  geometry.h  matrix.h  object.h  render.h  std_includes.h
include/pipeline/: cpu_object_manager.h  cuda_object_manager.h  object_manager.h
include/pipeline/cuda/: cuda_bridge.cuh  types.cuh  vertex_shader.cuh
src/: camera.cpp  matrix.cpp  object.cpp  render.cpp  test.cpp
src/pipeline/: cpu_object_manager.cpp  cuda_object_manager.cpp
src/pipeline/cuda/: cuda_bridge.cu  vertex_shader.cu
